# analytics-dbt-poc

./: databricks.yml  pyproject.toml
dashboard/: dashboard.lvdash.json
docs/: DASHBOARD_SETUP_GUIDE.md  METRIC_VIEWS_GUIDE.md  SDP_CONCEPTS.md  ZEROBUS_SDK_CONTEXT.md  planejamento_dashboard_btc.txt
resources/: ingestion.bybit_consumer.job.yml  transformations.job.yml  transformations.pipeline.yml
src/ingestion_btc/: __init__.py  bybit_consumer.py  config.py  main.py
src/transformations/01_silver/: stg_trades_btc.sql  trades_btc.sql
src/transformations/02_gold/: f_forecast.sql  f_trade_analytics.sql  vw_trades_realtime.sql
src/transformations/03_semantic/: mtv_btc_forecast.sql  mtv_btc_intraday.sql  mtv_btc_price_timeline.sql
