[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion_btc"
version = "1.0.0"
description = "Bybit BTC trades -> ZeroBus SDK -> Delta (z_bitcoin.bronze.bybit_trades)"
requires-python = ">=3.10"
dependencies = [
    "databricks-zerobus-ingest-sdk==1.2.0",
    "websockets>=12.0",
    "nest-asyncio>=1.6",
    "databricks-sdk>=0.30",
]

[project.scripts]
ingestion_btc = "ingestion_btc.main:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingestion_btc*"]
